[~] Fix nav icons not working on small screens

--- a/app/assets/stylesheets/shared/nav.scss
+++ b/app/assets/stylesheets/shared/nav.scss
@@ -108,7 +108,7 @@
   cursor: pointer;
 
   &.active .fa {
-    color: $green;
+    color: $green !important;
   }
 }
 
